--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/agpritts/challenge14-mvc-tech-blog#readme",
   "dependencies": {
+    "bulma": "^0.9.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
